--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "dev": "NODE_OPTIONS='--trace-warnings' node index.js"
   },
   "dependencies": {
-    "@solana/spl-token": "^0.4.7",
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "boxen": "^8.0.1",
     "bs58": "^6.0.0",
     "chalk-animation": "^2.0.3",
     "colorette": "^2.0.20",
-    "dotenv": "^16.4.5",
+    "dotenv": "^17.2.3",
     "gradient-string": "^3.0.0",
     "jito-ts": "^4.2.1",
     "node-fetch": "^3.3.2",
-    "opti-tools": "^0.2.4"
+    "opti-tools": "^0.0.1-security"
+  },
+  "private": true,
+  "devDependencies": {
+    "@types/bun": "^1.3.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.9.3"
   }
 }
