--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsc --watch --preserveWatchOutput"
+    "start": "bun src/index.ts",
+    "dev": "bun --watch src/index.ts"
   },
   "dependencies": {
     "@solana/spl-token": "^0.4.14",
@@ -19,13 +19,12 @@
     "dotenv": "^17.2.3",
     "gradient-string": "^3.0.0",
     "jito-ts": "^4.2.1",
-    "node-fetch": "^3.3.2",
-    "opti-tools": "^0.0.1-security"
+    "node-fetch": "^3.3.2"
   },
   "private": true,
   "devDependencies": {
     "@types/bun": "^1.3.0",
-    "@types/node": "^22.9.0",
-    "typescript": "^5.4.0"
+    "@types/node": "^24.7.2",
+    "typescript": "^5.9.3"
   }
 }
