Refactor for base asset flexibility and add Helius Sender support
Migrates bot logic from USDC-centric to configurable base asset (defaulting to SOL), updating all relevant config, logging, and calculation paths. Adds support for Helius Sender broadcast as a fallback transport for swaps, with new config options and sender integration. Improves DEX label extraction, concurrency queue, and snapshot reporting to reflect base asset. Updates README and env.example for new configuration and usage.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apex-meme-arb-bot",
   "version": "1.0.2",
   "type": "module",
-  "description": "USDC/MEME/USDC arbitrage scanner & executor via Jupiter API (free/ultra) with multi-DEX awareness, snapshots, and colorful logs.",
+  "description": "SOL/MEME/SOL arbitrage scanner & executor via Jupiter API (free/ultra) with multi-DEX awareness, snapshots, and colorful logs.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
